<resources>
    <string name="app_name">Calculator\nPrime</string>
    <string name="mclear">MC</string>
    <string name="MR">MR</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="clear">AC/C</string>
    <string name="percent">%</string>
    <string name="close_bracket">)</string>
    <string name="open_bracket">(</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mul">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="div">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="ans">ANS</string>
    <string name="plus">+</string>
    <string name="equal">=</string>

    <string name="memory"> memory -</string>
    <string name="memory_display">0.0</string>
    <string name="result"></string>
    <string name="display"></string>
    <string name="ch">%</string>
</resources>
